[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/undersea.png" type="Texture" id=1]
[ext_resource path="res://Elements/item.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sounds/tutorial.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/GUI/coin.png" type="Texture" id=4]
[ext_resource path="res://GUI/Game.gd" type="Script" id=5]
[ext_resource path="res://GUI/RESTART.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/Mcbungus-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 86, 599, 0, 0, 0, 0, 955, 599 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:stream")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "tutorial"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:stream")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 5.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="DynamicFont" id=4]
size = 80
use_filter = true
font_data = ExtResource( 7 )

[node name="Game" type="Node2D" groups=["game"]]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
scene_restart = ExtResource( 6 )
bubble_scene = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 1.17 )
texture = ExtResource( 1 )
centered = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 86, 599 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/tutorial = SubResource( 3 )

[node name="countown" type="Timer" parent="."]

[node name="score" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="score"]
position = Vector2( 75, 61 )
scale = Vector2( 1.32759, 1.36538 )
texture = ExtResource( 4 )

[node name="label" type="Label" parent="score"]
margin_left = 120.0
margin_top = 24.0
margin_right = 160.0
margin_bottom = 98.0
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_fonts/font = SubResource( 4 )
text = "s"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="countown" to="." method="_on_countown_timeout"]
